force-app/main/default/objects/Logs__c/Logs__c.object-meta.xml
<CustomObject>
    <label>inwise Logs</label>
    <nameField>
        <displayFormat>ILN-{0000}</displayFormat>
        <label>Logs No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>