force-app/main/default/objects/Logs__c/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <label>Api Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>