force-app/main/default/objects/Logs__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>