force-app/main/default/objects/Logs__c/fields/Run_By__c.field-meta.xml
<CustomField>
    <fullName>Run_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>inwise_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>