force-app/main/default/objects/Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Api_Name__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Run_By__c</columns>
    <columns>Run_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>